--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,1 +1,37 @@
-<h1>Hey</h1>
+<div class="separate"></div>
+
+<div class="page-title">
+    <h1>Contact</h1>
+</div>
+
+<div class="center-me">
+    <p>LOGO HERE</p>
+</div>
+
+<div class="center-me">
+    <p>Send me a message and I will get back to you within 48 hours</p>
+</div>
+
+<section class="contact-form-section">
+    <form action="data/contact.php" method="post">
+        <div>
+            <label for="name-field">Name: </label>
+            <input id ="name-field" name="name" type="text" placeholder="Full Name">
+        </div>
+        <div>
+            <label for="email-field">Email: </label>
+            <input id="email-field" name="mail" type="text" placeholder="Email">
+        </div>
+        <div>
+            <label for="subject-field">Subject</label>
+            <input id="subject-field" name="subject" type="text" placeholder="subject">
+        </div>
+        <div>
+            <label for="message-field">Message: </label>
+            <textarea id="message-field" name="message" cols="30" rows="10" placeholder="Message"></textarea>
+        </div>
+        <div>
+            <button type="submit" name="submit">Submit</button>
+        </div>
+    </form>
+</section>
