--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -13,7 +13,7 @@
 </div>
 
 <section class="contact-form-section">
-    <form action="data/contact.php" method="post">
+    <form action="contact.php" method="post">
         <div>
             <label for="name-field">Name: </label>
             <input id ="name-field" name="name" type="text" placeholder="Full Name">
