--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,39 @@
-<p>about</p>
+<div class="page-title">
+    <h1>About</h1>
+</div>
+
+<section class="about-section">
+<div class="center-me">
+    <p>selfie here</p>
+</div>
+
+<div>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur accusamus incidunt et ut. Sequi maiores laboriosam hic assumenda. Dolorum itaque sapiente magnam voluptatibus ipsa odit necessitatibus porro. Voluptatem optio, quasi impedit quas pariatur consequuntur architecto ullam cum excepturi illum repudiandae alias a earum magni corrupti non veniam omnis qui odio iusto in asperiores. Accusamus maiores maxime sunt aliquid. Cum facere laborum doloremque ab ex obcaecati qui voluptatibus odio. Omnis ducimus ipsam facilis impedit earum, nam fuga assumenda recusandae in. Tempore quo reprehenderit, eligendi recusandae magnam at necessitatibus maiores ullam minus culpa modi corporis unde perferendis fugit provident aliquam animi! Inventore.</p>
+</div>
+</section>
+
+<div class="page-title">
+    <h1>Skills</h1>
+</div>
+
+<section id="skills-logos-section">
+    <div class="skills-logo">
+        <p>logo1</p>
+    </div>
+    <div class="skills-logo">
+        <p>logo2</p>
+    </div>
+    <div class="skills-logo">
+        <p>logo3</p>
+    </div>
+    <div class="skills-logo">
+        <p>logo4</p>
+    </div>
+    <div class="skills-logo">
+        <p>logo5</p>
+    </div>
+    <div class="skills-logo">
+        <p>logo6</p>
+    </div>
+
+</section>
