--- a/views/mograph.hbs
+++ b/views/mograph.hbs
@@ -1,1 +1,22 @@
-<p>Mo graph</p>
+    <div class="page-title">
+        <h1>Motion Graphics</h1>
+    </div>
+
+
+<section id="mograph-body">
+
+<section id="video-section">
+    <div id="video">
+        <p>video here</p>
+    </div>
+ </section>
+
+ <section class="video-description">
+
+     <h1>Video Title Here</h1>
+
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis enim blanditiis optio eligendi cumque inventore porro veritatis incidunt debitis distinctio.</p>
+
+ </section>
+
+</section>
