--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -1,1 +1,27 @@
-<p>portfolio</p>
+
+
+    <div class="page-title">
+        <h1>Portfolio</h1>
+    </div>
+
+ <section id="portfolio-menu">
+
+
+
+    <div class="portfolio-pannel">
+        <p>photography</p>
+    </div>
+
+    <div class="portfolio-pannel">
+        <p>Videography</p>
+    </div>
+
+    <div class="portfolio-pannel">
+        <p>Graphics Design</p>
+    </div>
+
+    <div class="portfolio-pannel">
+        <a href="/mograph"><p>Motion Graphics</p></a>
+    </div>
+
+ </section>
