--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,4 +1,4 @@
-<div class="separate"></div>
+
 
 <div class="page-title">
     <h1>Contact</h1>
@@ -11,17 +11,27 @@
 <div class="center-me">
     <p>Send me a message and I will get back to you within 48 hours</p>
 </div>
-<div class="center-me">
-<form action="post">
-    <label for="usermail">Please enter your email address:</label>
-    <input type="email" name="usermail" required>
 
-    <label for="name">Please enter your company name (optional)</label>
-    <input type="text" name="company">
 
-    <label for="message">Please enter your message:</label>
-    <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
 
-    <input type="submit" value="Send!" class="submit-button">
-</form>
-</div>
+<section class="contact-form-section">
+    <form action="data/contact.php" method="post">
+        <div>
+                <label for="name">Please enter your name (optional)</label>
+                <input type="text" name="company">
+        </div>
+        <div>
+            <label for="usermail">Please enter your email address:</label>
+            <input type="email" name="usermail" required>
+        </div>
+        <div>
+            <label for="message">Please enter your message:</label>
+            <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+        </div>
+        <div>
+            <input type="submit" value="Send!" class="submit-button">
+        </div>
+    </form>
+</section>
+
+<script src="js/conact.js"></script>
