--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,15 +38,16 @@
          <p class="box-helper">logo here</p>
      </div>
 
-     <nav>
+     <nav class="hide-me fadeInDown">
          <ul id="main-navigation">
-             <li><a>Home</a></li>
-             <li><a>Portfolio</a></li>
-             <li><a>About</a></li>
-             <li><a>Contact</a></li>
+             <li><a href="/">Home</a></li>
+             <li><a href="/portfolio">Portfolio</a></li>
+             <li><a href="/about">About</a></li>
+             <li><a href="/contact">Contact</a></li>
          </ul>
      </nav>  
  </header>
+ <div class="separate"></div>
 
  {{{body}}}
 
