--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
                  
                 <input type="checkbox" id="toggle">
         
-                <label for="toggle">
+                <label id ="hamburger-label" for="toggle">
                     <div class="hamburger">
                         <div class="center"></div>
                     </div>
