--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
  <section id="video-section">
     <div id="video">
-        <p>video here</p>
+        <video src="videos/demoReel.mp4" muted autoplay></video>
     </div>
  </section>
 
@@ -11,19 +11,19 @@
 
      <div class="center-pannels">
         <div class="pannels">
-            <p class="pannel-icon">icon 1</p>
+            <img src="images/camera.png" alt="camera icon" class="pannel-icon">
             <p class="pannel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem possimus alias, debitis iusto impedit accusantium modi rerum delectus beatae earum.</p>
-            <p class="pannel-button">button</p>
+            <a href="#" class="pannel-button">Photography ►</a>
         </div>
         <div class="pannels">
-            <p class="pannel-icon">icon 2</p>
+            <img src="images/video-camera.png" alt="video icon" class="pannel-icon">
             <p class="pannel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem possimus alias, debitis iusto impedit accusantium modi rerum delectus beatae earum.</p>
-            <p class="pannel-button">button</p>
+            <a href="#" class="pannel-button">Videography ►</a>
         </div>
         <div class="pannels">
-            <p class="pannel-icon">icon 3</p>
+            <img src="images/web-startup.png" alt="graphics icon" class="pannel-icon">
             <p class="pannel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem possimus alias, debitis iusto impedit accusantium modi rerum delectus beatae earum.</p>
-            <p class="pannel-button">button</p>
+            <a href="#" class="pannel-button">Motion Graphics ►</a>
         </div>
      </div>
  </section>
@@ -31,16 +31,17 @@
 
  <section id="brand-ive-worked-with">
         <div class="center-me">
-            <h1>Brands Ive Worked With</h1> 
+            <h1>Brands I've Worked With</h1> 
         </div>
 
         <div id="brand-logo-section">
-            <p class="brand-logo logo1-temporary">Logo 1</p>
-            <p class="brand-logo">Logo 2</p>
-            <p class="brand-logo">Logo 3</p>
-            <p class="brand-logo">Logo 4</p>
-            <p class="brand-logo">Logo 5</p>
+            <div><img src="images/dreamCulture.png" alt="dream culture"></div>
+            <div><img src="images/dreamsFestival.png" alt="dream culture"></div>
+            <div><img src="images/hashtagHealth.png" alt="dream culture"></div>
+            <div><img src="images/uwo.png" alt="dream culture"></div>
+            <div><img src="images/lifetimesliving.png" alt="dream culture"></div>
             
+    
 
         </div>
 
