--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <link rel='icon' href='images/favicon.ico' type='image/x-icon'/>
-    <title>portfolio</title>
+    <link rel="stylesheet" href="https://use.typekit.net/qqu5gou.css">
+    <title>Noah Fainer - Portfolio</title>
 </head>
 <body>
 
@@ -25,17 +26,16 @@
         </div>
 
         <div id="social-links">
-            <p>ig</p>
-            <p>fb</p>
-            <p>li</p>
+            <a href="https://www.facebook.com/nfainer/" target="_blank"><img src="images/facebook.png" alt="facebook link"></a>
+             <a href="https://www.instagram.com/nfainer/" target="_blank"><img src="images/instagram.png" alt="instagram link"></a>
+             <a href="https://www.linkedin.com/in/noah-fainer-811993163/" target="_blank"><img src="images/linkedin.png" alt="linkedin link"></a>
+            
         </div>
 
 
 
      <div id="logo-wrapper">
-
-
-         <p class="box-helper">logo here</p>
+         <a href="/"><img src="images/logo.png" id="logo"></a>
      </div>
 
      <nav class="hide-me fadeInDown">
@@ -53,12 +53,19 @@
 
   <footer>
      <div id="contact-footer">
-        <p class="contact-info">contact info here</p>
-        <p class="contact-info">and here</p>
+        <div>
+            <h1>Noah Fainer</h1>
+            <p class="contact-info">Toronto, Canada</p>
+        </div>
+        <div>
+            <h1>Contact Info</h1>
+            <p class="contact-info">647 200 0488</p>
+            <p class="contact-info">noah.fainer@gmail.com</p>
+        </div>
      </div>
 
      <div id="copyright">
-        <p>copyright</p>
+        <p>Noah Fainer All Right Reserved ®</p>
      </div>
  </footer>
     <script src="js/main.js"></script>
