--- a/public/css/main.css
+++ b/public/css/main.css
@@ -368,7 +368,7 @@ padding-bottom: 20px;
     justify-content: center;
     align-items: center;
     height: 220px;
-    background-color: blueviolet;
+    background-color: #fff;
 }
 .separate{
     height:50px;
@@ -477,4 +477,71 @@ align-items: center;
 /* anianmation end here */
 
   
+/* contact here */
 
+#logo-contact{
+
+    width: 80%
+}
+
+#form-section{
+
+    width: 100%;
+}
+
+input {
+    width: 100%;;
+}
+
+.form{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form textarea{
+    width:100%;
+    text-align: center;
+    margin: 10px;
+    padding: 50px;
+    border: none;
+    -webkit-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+    -moz-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+    box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+}
+
+input[type=text]{
+    border: none;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    -webkit-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+-moz-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+}
+
+input[type=email]{
+    border: none;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    -webkit-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+-moz-box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+box-shadow: inset 0px 0px 23px 0px rgba(0,0,0,0.31);
+}
+
+.submit-button{
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+    margin: 10px;
+    padding: 10px;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#11112a+0,463658+100 */
+background: #11112a; /* Old browsers */
+background: -moz-linear-gradient(top, #11112a 0%, #463658 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #11112a 0%,#463658 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #11112a 0%,#463658 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11112a', endColorstr='#463658',GradientType=0 ); /* IE6-9 */
+}
