--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,10 +40,10 @@
 
      <nav class="hide-me fadeInDown">
          <ul id="main-navigation">
-             <li><a href="/">Home</a></li>
-             <li><a href="/portfolio">Portfolio</a></li>
-             <li><a href="/about">About</a></li>
-             <li><a href="/contact">Contact</a></li>
+            <a href="/" class="nav-button"><li>Home</li></a>
+            <a href="/portfolio" class="nav-button"><li>Portfolio</li></a>
+            <a href="/about" class="nav-button"><li>About</li></a>
+            <a href="/contact" class="nav-button"><li>Contact</li></a>
          </ul>
      </nav>  
  </header>
