fixed portfolio page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,11 +4,11 @@
 
 <section class="about-section">
 <div class="center-me">
-    <p>selfie here</p>
+    <img src="images/DP.png" alt="my face" id="selfie">
 </div>
 
 <div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur accusamus incidunt et ut. Sequi maiores laboriosam hic assumenda. Dolorum itaque sapiente magnam voluptatibus ipsa odit necessitatibus porro. Voluptatem optio, quasi impedit quas pariatur consequuntur architecto ullam cum excepturi illum repudiandae alias a earum magni corrupti non veniam omnis qui odio iusto in asperiores. Accusamus maiores maxime sunt aliquid. Cum facere laborum doloremque ab ex obcaecati qui voluptatibus odio. Omnis ducimus ipsam facilis impedit earum, nam fuga assumenda recusandae in. Tempore quo reprehenderit, eligendi recusandae magnam at necessitatibus maiores ullam minus culpa modi corporis unde perferendis fugit provident aliquam animi! Inventore.</p>
+    <p>My name is Noah Fainer. I believe that doing more is living more. It’s hard to say: am I a snowboarder, skateboarder, teacher, photographer or motion graphics artist? The answer to me is simply all the above. However, this is how I see myself. My online identity can be said to be different than my offline because my online identity exists as a result of the actions I take, while my offline identity is constantly being molded by my experiences and surroundings. Furthermore, this is because I curate my online profiles to express who I believe I am and what is most important to me. I have a goal in life and a career to pursue; I want to tell the world that this is who I am trying to be (just not as explicitly).</p>
 </div>
 </section>
 
@@ -18,22 +18,22 @@
 
 <section id="skills-logos-section">
     <div class="skills-logo">
-        <p>logo1</p>
+        <img src="images/afterEffects.png" alt="ae">
     </div>
     <div class="skills-logo">
-        <p>logo2</p>
+        <img src="images/premierePro.png" alt="pr ">
     </div>
     <div class="skills-logo">
-        <p>logo3</p>
+        <img src="images/lightroom.png" alt="lr">
     </div>
     <div class="skills-logo">
-        <p>logo4</p>
+        <img src="images/photoshop.png" alt="ps">
     </div>
     <div class="skills-logo">
-        <p>logo5</p>
+        <img src="images/illustrator.png" alt="ai">
     </div>
     <div class="skills-logo">
-        <p>logo6</p>
+        <img src="images/cinema4d.png" alt="c4d">
     </div>
 
 </section>
