--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -9,19 +9,23 @@
 
 
     <div class="portfolio-pannel">
-        <p>photography</p>
+        <img src="images/portfolio-photography.png" alt="">
+        <a href="#">Photography</a>
     </div>
 
     <div class="portfolio-pannel">
-        <p>Videography</p>
+        <img src="images/portfolio-videography.png" alt="">
+        <a href="#">Videography</a>
     </div>
 
     <div class="portfolio-pannel">
-        <p>Graphics Design</p>
+        <img src="images/portfolio-graphicsDesign.png" alt="">
+        <a href="#">Graphics Design</a>
     </div>
 
     <div class="portfolio-pannel">
-        <a href="/mograph"><p>Motion Graphics</p></a>
+        <img src="images/portfolio-mograph.png" alt="">
+        <a href="#">Motion Graphics</a>
     </div>
 
  </section>
