--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,6 +41,7 @@ font-style: normal;
 }
 header{
     text-align: center;
+    z-index: 100000;
     position: fixed;
     height: 58px;
     width: 100%;
@@ -102,11 +103,13 @@ ul a{
 }
 
 .nav-button:hover {
-    background-color: rgba(110, 110, 110, 0.74);
+    background-color: rgba(19, 12, 31, 0.932);
+    font-size: 12px;
 }
 
 .nav-button {
     display: block;
+    height: 16px;
     color: #fff;
     padding: 4px;
     font-size: 13px;
@@ -395,8 +398,7 @@ align-items: center;
     padding: 40px;
 }
 
-
-  #portfolio-menu{
+#portfolio-menu{
 
     display: flex;
     justify-content: center;
@@ -409,8 +411,76 @@ align-items: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    overflow: hidden;
 }
+
+.portfolio-pannel img{
+    width: 100%;
+    transition: 1s;
+}
+
+.portfolio-pannel img:hover{
+    filter: brightness(0.7);
+    transform: scale(1.1);
+}
+
+.portfolio-pannel a{
+    position: absolute;
+    color:#fff;
+    font-size: 50px;
+    transition: 1s;;
+}
+
+.portfolio-pannel a:hover{
+    font-size: 45px;
+}
+
+
+
+
+
+.portfolio-pannel-img{
+    float: left;
+    overflow: hidden;
+    position: relative;
+    z-index: -1;
+}
+
+.portfolio-pannel-overlay{
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    transition: .5s ease;
+}
+
+.portfolio-pannel-text{
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+/* .portfolio-pannel img{
+    transition: 1s;
+    height: 100%;
+} */
+
+
+
+/* .portfolio-pannel img:hover{
+    filter: brightness(0.6);
+    transform: scale(1.3);
+} */
 
 /* video section */
 
@@ -434,9 +504,7 @@ align-items: center;
 }
 
 .skills-logo{
-    padding: 50px;
-    border: solid;
-    margin: 10px;
+    margin: 40px;
 }
 
 
@@ -545,4 +613,8 @@ background: -moz-linear-gradient(top, #11112a 0%, #463658 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top, #11112a 0%,#463658 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, #11112a 0%,#463658 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11112a', endColorstr='#463658',GradientType=0 ); /* IE6-9 */
+}
+
+#selfie{
+    margin-bottom: 20px;
 }
