--- a/public/css/main.css
+++ b/public/css/main.css
@@ -201,6 +201,14 @@ box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
         padding: 5px;
         transform: scale(0.7);
     }
+
+    .portfolio-pannel a{
+        font-size: 24px;
+    }
+
+    .portfolio-pannel a:hover{
+        font-size: 20px;
+    }
 }
 
 .pannels{
@@ -412,6 +420,7 @@ align-items: center;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    font-size: 34px;
 }
 
 .portfolio-pannel img{
@@ -425,14 +434,14 @@ align-items: center;
 }
 
 .portfolio-pannel a{
+    text-align: center;
     position: absolute;
     color:#fff;
-    font-size: 50px;
-    transition: 1s;;
+    transition: 1s;
 }
 
 .portfolio-pannel a:hover{
-    font-size: 45px;
+    font-size: 32px;
 }
 
 
