fixed home video

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
  <section id="video-section">
     <div id="video">
-        <video src="videos/demoReel.mp4" muted autoplay></video>
+        <video src="videos/demoReel.mp4" muted autoplay loop></video>
     </div>
  </section>
 
