--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,7 +142,7 @@ ul{
 
 #video{
     display: flex;
-
+    width: 100%;
     overflow: hidden;
     justify-content: center;
     align-items: center;
@@ -154,6 +154,7 @@ box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 
 
 #video video{
+    width:100%;
     z-index: -1;
     filter: brightness(0.35);
 }
