--- a/views/mograph.hbs
+++ b/views/mograph.hbs
@@ -6,16 +6,16 @@
 <section id="mograph-body">
 
 <section id="video-section">
-    <div id="video">
-        <p>video here</p>
+    <div id="mograph-demoReel">
+        <iframe src="https://player.vimeo.com/video/378070956" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
  </section>
 
  <section class="video-description">
 
-     <h1>Video Title Here</h1>
+     <h1>Noah Fainer Motion Graphics Demo Reel 2019</h1>
 
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis enim blanditiis optio eligendi cumque inventore porro veritatis incidunt debitis distinctio.</p>
+     <p>This video is an edited stylistic compilation of all of my work related to motion graphics. To make this I used Adobe Premiere Pro, After Effects, Cinema 4D and Octane Render engine.</p>
 
  </section>
 
