--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -25,7 +25,7 @@
 
     <div class="portfolio-pannel">
         <img src="images/portfolio-mograph.png" alt="">
-        <a href="#">Motion Graphics</a>
+        <a href="/mograph">Motion Graphics</a>
     </div>
 
  </section>
