--- a/sass/main.scss
+++ b/sass/main.scss
@@ -385,8 +385,7 @@ form {
 .video-description {
 	display: flex;
 	justify-content: center;
-	align-items: flex-start;
-	align-items: left;
+	align-items: center;
 	flex-direction: column;
 }
 .about-section {
