--- a/sass/main.scss
+++ b/sass/main.scss
@@ -143,11 +143,11 @@ li {
 	padding: 0 30px 0 30px;
 }
 .pannels {
+	width: 100%;
 	-webkit-box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 	box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	padding: 30px;
@@ -160,7 +160,10 @@ li {
 }
 .pannel-button {
 	color: #fff;
-	margin-top: 10px;
+    margin-top: 10px;
+    font-size: 24px;
+	font-weight: bold;
+	text-align: center;
 }
 #brand-logo-section {
 	display: flex;
@@ -382,6 +385,14 @@ form {
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
+
+.pannel-text {
+	padding: 40px;
+    line-height: 26px;
+    font-size: 16px;
+    text-align: center;
+}
+
 .video-description {
 	display: flex;
 	justify-content: center;
