--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
             <img src="images/{{link}}" alt="camera icon" class="pannel-icon">
             <p class="pannel-text">{{description}}</p>
             {{/with}}
-            <a href="#" class="pannel-button">Photography ►</a>
+            <a href="/photography" class="pannel-button">Photography ►</a>
         </div>
         <div class="pannels">
             {{#with item.[1]}}
