--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -10,7 +10,7 @@
 
     <div class="portfolio-pannel">
         <img src="images/portfolio-photography.png" alt="">
-        <a href="#">Photography</a>
+        <a href="/photography">Photography</a>
     </div>
 
     <div class="portfolio-pannel">
