--- a/views/photography.hbs
+++ b/views/photography.hbs
@@ -4,19 +4,27 @@
     
     <section id="photography-section">
 
-        <div class="portfolio-pannel">
+
+<a href="#" class="portfolio-pannel">
+    <div>
+        <p >Portraits</p>
         <img src="images/photography-portraits.png" alt="">
-        <a href="#">Portraits</a>
     </div>
+</a>
 
-    <div class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
+    <div>
+        <p>Concert</p>
         <img src="images/photography-concert.png" alt="">
-        <a href="/concert">Concert</a>
     </div>
+</a>
 
-    <div class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
+    <div>
+        <p>Travel</p>
         <img src="images/photography-travel.png" alt="">
-        <a href="#">Travel</a>
     </div>
+</a>
+
     </section>
     
