--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -7,25 +7,31 @@
  <section id="portfolio-menu">
 
 
-
-    <div class="portfolio-pannel">
-        <img src="images/portfolio-photography.png" alt="">
-        <a href="/photography">Photography</a>
+<a href="/photography" class="portfolio-pannel">
+    <div >
+        <p>Photography</p>
+       <img src="images/portfolio-photography.png" alt="">
     </div>
+</a>
 
-    <div class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
+    <div>
+        <p >Videography</p>
         <img src="images/portfolio-videography.png" alt="">
-        <a href="#">Videography</a>
     </div>
+</a>
 
-    <div class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
+    <div>
+        <p >Graphics Design</p>
         <img src="images/portfolio-graphicsDesign.png" alt="">
-        <a href="#">Graphics Design</a>
     </div>
+</a>
 
-    <div class="portfolio-pannel">
-        <img src="images/portfolio-mograph.png" alt="">
-        <a href="/mograph">Motion Graphics</a>
+<a href="#" class="portfolio-pannel">
+    <div class="pannel-link-contianer">
+        <p>Motion Graphics</p>
+        <img src="images/portfolio-mograph.png" alt="">   
     </div>
-
+</a>  
  </section>
