--- a/sass/main.scss
+++ b/sass/main.scss
@@ -341,17 +341,28 @@ form {
 	font-size: 34px;
 	img {
 		width: 100%;
-		transition: 1s;
+
+
+	}
+
+	div{
+		display: flex;
+		justify-content: center;
+		align-items: center;			
+		transition: 1s;	
 		&:hover {
 			filter: brightness(0.7) blur(2px);
 			transform: scale(1.1);
 		}
 	}
-	a {
+
+
+	div p {
 		text-align: center;
 		position: absolute;
 		color: #fff;
 		transition: 1s;
+		z-index: 1000;
 		&:hover {
 			font-size: 32px;
 		}
@@ -548,7 +559,7 @@ input[type=email] {
 	
 	#photography-section{
 		display:flex;
-		height: 61vw;
+		height: 60vw;
 	}
 
 	.concert-page-container{
