--- a/views/photography.hbs
+++ b/views/photography.hbs
@@ -5,21 +5,21 @@
     <section id="photography-section">
 
 
-<a href="#" class="portfolio-pannel">
+<a href="/portraits" class="portfolio-pannel">
     <div>
         <p >Portraits</p>
         <img src="images/photography-portraits.png" alt="">
     </div>
 </a>
 
-<a href="#" class="portfolio-pannel">
+<a href="/concert" class="portfolio-pannel">
     <div>
         <p>Concert</p>
         <img src="images/photography-concert.png" alt="">
     </div>
 </a>
 
-<a href="#" class="portfolio-pannel">
+<a href="/travel" class="portfolio-pannel">
     <div>
         <p>Travel</p>
         <img src="images/photography-travel.png" alt="">
