--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -14,21 +14,21 @@
     </div>
 </a>
 
-<a href="#" class="portfolio-pannel">
+<a href="/videography" class="portfolio-pannel">
     <div>
         <p >Videography</p>
         <img src="images/portfolio-videography.png" alt="">
     </div>
 </a>
 
-<a href="#" class="portfolio-pannel">
+<a href="/graphicsDesign" class="portfolio-pannel">
     <div>
         <p >Graphics Design</p>
         <img src="images/portfolio-graphicsDesign.png" alt="">
     </div>
 </a>
 
-<a href="#" class="portfolio-pannel">
+<a href="/mograph" class="portfolio-pannel">
     <div class="pannel-link-contianer">
         <p>Motion Graphics</p>
         <img src="images/portfolio-mograph.png" alt="">   
