--- a/views/photography.hbs
+++ b/views/photography.hbs
@@ -1,5 +1,5 @@
     <div class="page-title">
-        <h1>Portfolio</h1>
+        <h1>Photography Portfolio</h1>
     </div>
     
     <section id="photography-section">
