--- a/views/home.hbs
+++ b/views/home.hbs
@@ -24,14 +24,14 @@
             <img src="images/{{link}}" alt="video icon" class="pannel-icon">
             <p class="pannel-text">{{description}}</p>
             {{/with}}
-            <a href="#" class="pannel-button">Videography ►</a>
+            <a href="/videography" class="pannel-button">Videography ►</a>
         </div>
         <div class="pannels">
             {{#with item.[2]}}
             <img src="images/{{link}}" alt="graphics icon" class="pannel-icon">
             <p class="pannel-text">{{description}}</p>
             {{/with}}
-            <a href="#" class="pannel-button">Motion Graphics ►</a>
+            <a href="/mograph" class="pannel-button">Motion Graphics ►</a>
         </div>
      </div>
  </section>
