--- a/sass/main.scss
+++ b/sass/main.scss
@@ -103,10 +103,11 @@ li {
 	justify-content: center;
 	align-items: center;
 }
-#video-section {
+.video-section {
 	display: flex;
 	justify-content: center;
 	flex: 1;
+	margin-top: 30px;
 	margin-bottom: 30px;
 }
 #video {
@@ -190,6 +191,7 @@ li {
 }
 
 #contact-footer {
+	font-size: 24px;
 	display: flex;
 	justify-content: space-around;
 	padding-top: 30px;
@@ -360,7 +362,6 @@ form {
 
 	div p {
 		margin: 0;
-		font-size: 17px;
 		text-align: center;
 		position: absolute;
 		color: #fff;
@@ -408,6 +409,7 @@ form {
 }
 
 .video-description {
+	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -490,7 +492,7 @@ input[type=email] {
 #selfie {
 	margin-bottom: 20px;
 }
-#mograph-demoReel {
+.video-player {
 	position: relative;
 	overflow: hidden;
 	display: flex;
@@ -501,11 +503,24 @@ input[type=email] {
 	height: 54vw;
 }
 
-#mograph-body {
-    padding: 50px;
+.video-body {
+    padding: 15px;
 }
 
 @media only screen and (max-width: 768px) {
+
+	#contact-footer{
+		font-size: 9px;
+	}
+
+	.nav-button{
+		padding: 12px;
+	}
+
+	.portfolio-pannel{
+		font-size: 17px;
+	}
+
 	.center-pannels {
 		display: flex;
 		flex-wrap: wrap;
