--- a/views/concert.hbs
+++ b/views/concert.hbs
@@ -7,9 +7,11 @@
     </div>
     
     <section class="concert-page-container">
-        
-        <p id="dreams-text">The Bud Light Dreams Music Festival is an electronic music festival hosted in Toronto, Canada at Echo Beach. This festival brings in an attendace of around 25,000 people over the course of two days. I was given the opportunity to work for the festival's production team as a photographer. I got to work with brands such as Monster energy and Coca-Cola taking product shots during the festival. I was also given the task to take photos of various artists throughout the festival over the course of both days. These photos can be seen here. </p>
-        <img src="images/lights.png" alt="lights photo" class="dreams-img" value="1">
+        <div class="dreams-img" value="1">
+             <img src="images/lights.png" alt="lights photo">
+        <p>The Bud Light Dreams Music Festival is an electronic music festival hosted in Toronto, Canada at Echo Beach. This festival brings in an attendace of around 25,000 people over the course of two days. I was given the opportunity to work for the festival's production team as a photographer. I got to work with brands such as Monster energy and Coca-Cola taking product shots during the festival. I was also given the task to take photos of various artists throughout the festival over the course of both days. These photos can be seen here. </p>
+        </div> 
+       
         <img src="images/ghastly.png" alt="lights photo" class="dreams-img" value="2">
         <img src="images/dukedumont.png" alt="lights photo" class="dreams-img" value="3">
 
@@ -35,9 +37,13 @@
  
 
     <section class="concert-page-container">
+        <div class="purple-fest-img" value="4">
+        <img src="images/juicewrld.png" alt="lights photo">
        <p class="purple-fest-text">Purple Fest is a music festival hosted by Western University every year during the university's homecoming event. The attendance for 2019 was aproximately 10,000 people; bringing in artists seen here such as A Boogie Wit Da Hoodie, Murda Beatz, Lil Uzi Vert, Juice WRLD, Loud Luxury and many more. I was given a media pass to take photos and video for the event. On this page you will find some of my photos which I had taken during Purple Fest 2018 and 2019.</p>
+        </div>
+
         <img src="images/loudluxury.png" alt="lights photo" value="3" class="purple-fest-img">
-        <img src="images/juicewrld.png" alt="lights photo" value="4" class="purple-fest-img">
+        
         
     </section>
   
